syntax = "proto3";

package userpreferences.service;

option csharp_namespace = "Parstech.Shop.Shared.Protos.UserPreferencesService";

service UserPreferencesService {
  rpc GetUserBilling (UserIdRequest) returns (UserBillingResponse) {}
  rpc UpdateUserBilling (UpdateBillingRequest) returns (UserBillingResponse) {}
  rpc ChangePassword (ChangePasswordRequest) returns (StatusResponse) {}
  rpc GetFavoriteProducts (UserNameRequest) returns (FavoriteProductsResponse) {}
  rpc GetComparisonProducts (UserNameRequest) returns (ComparisonProductsResponse) {}
  rpc GetShoppingCart (UserIdRequest) returns (ShoppingCartResponse) {}
  rpc GetWalletAmount (UserIdRequest) returns (WalletAmountResponse) {}
  rpc GetWalletCoin (UserIdRequest) returns (WalletCoinResponse) {}
  rpc GetWalletFacilities (UserIdRequest) returns (WalletFacilitiesResponse) {}
}

message UserIdRequest {
  int32 user_id = 1;
}

message UserNameRequest {
  string user_name = 1;
}

message UserBillingResponse {
  int32 id = 1;
  int32 user_id = 2;
  string company_name = 3;
  string economic_code = 4;
  string national_id = 5;
  string registration_number = 6;
  string phone_number = 7;
  string postal_code = 8;
  string address = 9;
}

message UpdateBillingRequest {
  int32 id = 1;
  int32 user_id = 2;
  string company_name = 3;
  string economic_code = 4;
  string national_id = 5;
  string registration_number = 6;
  string phone_number = 7;
  string postal_code = 8;
  string address = 9;
}

message ChangePasswordRequest {
  string old_password = 1;
  string new_password = 2;
  string confirm_password = 3;
}

message StatusResponse {
  bool is_success = 1;
  string message = 2;
  repeated string error_messages = 3;
}

message FavoriteProductsResponse {
  repeated ProductItem products = 1;
}

message ComparisonProductsResponse {
  repeated ProductItem products = 1;
}

message ProductItem {
  int32 id = 1;
  string name = 2;
  string image = 3;
  double price = 4;
  double discount = 5;
  string brand_name = 6;
  string category_name = 7;
  bool is_available = 8;
  string url = 9;
}

message ShoppingCartResponse {
  int32 order_id = 1;
  string user_name = 2;
  double total = 3;
  double discount = 4;
  double final_price = 5;
  repeated CartItemDetail details = 6;
}

message CartItemDetail {
  int32 id = 1;
  int32 order_id = 2;
  int32 product_id = 3;
  string product_name = 4;
  string product_image = 5;
  int32 count = 6;
  double price = 7;
  double discount = 8;
  double total = 9;
}

message WalletAmountResponse {
  double amount = 1;
}

message WalletCoinResponse {
  double coin = 1;
}

message WalletFacilitiesResponse {
  double facilities = 1;
} 